# webassembliss

./: .gitignore  Dockerfile  README.md  buildAndBash.sh  buildAndServe.sh  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
nginx/: default.conf  proxy.env
nginx/certs/: README.md
resources/: qiling_debugger_gdb_gdb.py  qiling_gdb_bugfix.py
webassembliss/: app.py  arch_config.py  emulation_example.py  gunicorn_config.py  utils.py  what_to_do.txt
webassembliss/arm64_extra_examples/: arm_emulation.py  ioExample.S  multiDriver.S  sampleLib.S
webassembliss/emulation/: HelloWorld  __init__.py  arch_config.py  arm64_linux.py  base_debugging.py  base_emulation.py  base_tracing.py  debugger_db.py  example.py  riscv64_linux.py  test_emulation.py  utils.py  x8664_linux.py
webassembliss/emulation/arm64_extra_examples/: Makefile  README.md  hello.S  (+2 more)
webassembliss/grader/: create_example_config.py  example_project_config.pb2  grader_types.py  project_config.proto  project_config_pb2.py  single_student.py  utils.py  validate_results.py
webassembliss/protos/: trace_info.proto
webassembliss/pyprotos/: project_config_pb2.py  trace_info_pb2.py
webassembliss/rootfs/: README.md
webassembliss/templates/: about.html.j2  arm64_linux.html.j2  base.html.j2  base_editor.html.j2  grader.html.j2  grader_check.html.j2  grader_error.html.j2  grader_results.html.j2  index.html.j2  project_config_builder.html.j2  riscv64_linux.html.j2  x8664_linux.html.j2
webassembliss/tests/: test_emulation.py  test_utils.py
webassembliss/utils/: __init__.py
(+82 files in other folders)
